# tencentcloud-cls-sdk-cpp

./: CMakeLists.txt  README.md  cls_logs.pb.cc  cls_logs.pb.h  logproducerconfig.pb.cc  logproducerconfig.pb.h
cls/: adapter.cpp  adapter.h  batchloggroup.cpp  client.cpp  client.h  logretryqueue.cpp  logretryqueue.h  logthreadpool.cpp  logthreadpool.h  logtimer.cpp  producerclient.cpp  sample.cpp  signature.cpp  syncsample.cpp  utils.cpp  utils.h
rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
rapidjson/error/: en.h  error.h
rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
rapidjson/msinttypes/: stdint.h
test/: CMakeLists.txt  tencentclssdk_benchmark.cpp  tencentclssdk_test.cpp
